@@ -33,6 +33,8 @@ https://github.com/elastic/beats/compare/v6.4.0...6.4[Check the HEAD diff]
 
 *Auditbeat*
 
+- Fixed a crash in the file_integrity module under Linux. {issue}7753[7753]
+
 *Filebeat*
 
 *Heartbeat*
